...
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".LogInActivity">


    <TextView
        android:id="@+id/loginTitle"
        android:layout_width="155dp"
        android:layout_height="49dp"
        android:layout_marginTop="52dp"
        android:layout_marginBottom="342dp"
        android:fontFamily="@font/courgette_regular"
        android:text="@string/login"
...
